--- a/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
+++ b/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
@@ -13,9 +13,27 @@
     padding: 2em;
     padding-top: 10px
 }
+.display-title-up .news-details {
+    position: absolute;
+    background: #fff;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    z-index: 10;
+    bottom: -90px;
+    left: 1px;
+    right: 1px;
+    margin-right: 25px;
+    margin-left: 25px;
+    padding: 2em;
+    padding-top: 10px;
+}
 .titlu-produs-lista.news-title {
     background: #eaeaea;
     padding: 0 0.5em;
+}
+.small-block .news-title:hover {
+    max-height: 224px;
 }
 /*START LIST DISPLAY TYPE GRID VIEW*/
 .list-container {
@@ -167,3 +185,4 @@
 .shop-background {
     background-color: #3f444c;
 }
+
