--- a/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
+++ b/Templates/Designs/TTonline/css/10_custom/New_Homepage.css
@@ -61,16 +61,42 @@
 /*1 column with Image No Summary*/
 /*1 column with Image with Summary*/
 .onecol-image-summary .small-block,
-.onecol-image-nosummary .small-block,
-.onecol-image-nosummary-small .small-block {
+.onecol-image-nosummary .small-block {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1rem;
+    display: -ms-grid;
+    -ms-grid-columns: 1fr 1fr;
 }
 
 /*1 column with Image small No Summary */
+.onecol-image-nosummary-small {
+    display: block;
+}
+
 .onecol-image-nosummary-small .small-block {
+    display: grid;
     grid-template-columns: 1fr 2fr;
+    display: -ms-grid;
+    -ms-grid-columns: 1fr 2fr;
+}
+.onecol-image-summary .overlay-link,
+.onecol-image-nosummary .overlay-link,
+.onecol-image-nosummary-small .overlay-link {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 1;
+    grid-row: 1;
+    margin-right: 0.5rem;
+}
+.onecol-image-summary header,
+.onecol-image-nosummary header,
+.onecol-image-nosummary-small header {
+    -ms-grid-column: 2;
+    grid-column: 2;
+    -ms-grid-row: 1;
+    grid-row: 1;
+    margin-left: 0.5rem;
 }
 .onecol-image-nosummary-small .simple-share, .onecol-image-nosummary-small .category  {
     display: none;
@@ -89,10 +115,31 @@
 }
 /*2 COLUMNS*/
 .twocol-noimage-nosummary, .twocol-noimage-summary, .twocol-image-nosummary, .twocol-image-summary {
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 3rem;
+    display: -ms-grid;
+    -ms-grid-columns: 1fr 1fr;
 }
-
+.twocol-noimage-nosummary.small-block:nth-child(1),
+.twocol-noimage-summary .small-block:nth-child(1),
+.twocol-image-nosummary .small-block:nth-child(1),
+.twocol-image-summary .small-block:nth-child(1) {
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-row: 1;
+    grid-row: 1;
+    margin-right: 1.5rem;    
+}
+.twocol-noimage-nosummary.small-block:nth-child(2),
+.twocol-noimage-summary .small-block:nth-child(2),
+.twocol-image-nosummary .small-block:nth-child(2),
+.twocol-image-summary .small-block:nth-child(2)  {
+    -ms-grid-column: 2;
+    grid-column: 2;
+    -ms-grid-row: 1;
+    grid-row: 1;
+    margin-left: 1.5rem;
+}
 /*2 columns No Image No Summary*/
 /*2 columns No Image with Summary*/
 .twocol-noimage-summary .category,
