--- a/Templates/Designs/TTonline/New_SectionLandingPage.cshtml
+++ b/Templates/Designs/TTonline/New_SectionLandingPage.cshtml
@@ -123,40 +123,56 @@ string filterValue8= "Item.Tip='Articole'";
     </div><!--se inchide row-ul pentru Articole-->
 
 
-@*ARTICOLE SI STIRI*@	
+    @*ARTICOLE SI STIRI*@	
+    @{
+        int toateStirile = GetPageIdByNavigationTag("ToateStirile");
+        var pageId = GetPageIdByNavigationTag("ArticlesCititeFeed");
+        var articlesIDs = "";
+        foreach (LoopItem item in GetLoop("ItemPublisher:Items.List"))
+        {
+            articlesIDs += item.GetString("ItemPublisher:Item.Field.PageId") + ",";
+        }
+    }
     <div class="col-xs-12">
         <div class="row handlebars-wrapper display-title-up" id="LoopArticoleStiri" data-template="LoopArticoleStiriTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&pagesize=8&Sections=@sectionID&Excluded=@excludedArticles">
-             @*Handlebars goes here*@ 
+            @*Handlebars goes here*@ 
         </div>
     </div>
+    
 
-<div class="row">
-  
-  <div class="col-xs-12">
-@{
-	 string filterValue4 = "Item.Tip='Stiri' and Item.SectiuneParinteId ='"+ GetString("DwPageID") +"'";
-            filterValue4 = filterValue4 + "\"\"";
+@*     @{ *@
+@* 	 string filterValue4 = "Item.Tip='Stiri' and Item.SectiuneParinteId ='"+ GetString("DwPageID") +"'"; *@
+@*             filterValue4 = filterValue4 + "\"\""; *@
+@*      *@
+@* } *@
+@*      *@
+@*     @RenderItemList(new {  *@
+@*       ItemType = "Dw_Page", *@
+@*       ListSourceType = "Area", *@
+@*       ListSourceArea ="1", *@
+@*       ItemFieldsList = "*", *@
+@*       ListTemplate = "/ItemPublisher/List/Loop-Stiri-LP-Sectiune-3col-image-nosummary.cshtml", *@
+@*       ListViewMode = "Partial", *@
+@*     	ListShowFrom = 1, *@
+@*     	ListShowTo= 6, *@
+@*    	  ListPageSize = 7,     *@
+@*       ListOrderBy = "Data", *@
+@*       ListOrderByDirection = "Descending", *@
+@*         Filter = filterValue4 *@
+    @*     }) *@
+    <div class="row">
     
-}
+    <h3 class="block-title" style="margin-top:25px!important;"><span>@Translate("Stiri","Stiri")</span></h3>
     
-    @RenderItemList(new { 
-      ItemType = "Dw_Page",
-      ListSourceType = "Area",
-      ListSourceArea ="1",
-      ItemFieldsList = "*",
-      ListTemplate = "/ItemPublisher/List/Loop-Stiri-LP-Sectiune-3col-image-nosummary.cshtml",
-      ListViewMode = "Partial",
-    	ListShowFrom = 1,
-    	ListShowTo= 6,
-   	  ListPageSize = 7,    
-      ListOrderBy = "Data",
-      ListOrderByDirection = "Descending",
-      Filter = filterValue4
-    })
-
-  </div>
-    
-</div>
+    </div>
+    <div class="col-xs-12">
+        <div class="row handlebars-wrapper display-title-up" id="LoopStiri" data-template="LoopStiriTemplate" data-json-feed="/Default.aspx?ID=@articlesPageId&Sections=@sectionID&pagesize=5&type=Stiri">
+            @*Handlebars goes here*@ 
+        </div>
+    </div>
+    <div class="row load-more">
+                  <a href='/stiri?Sectiune=@sectionID'><button type="button" class="btn btn-lg btn-block">@Translate("MaiMulteStiri","Mai multe stiri")</button></a>
+              </div>
 
 </div>
 
@@ -637,6 +653,43 @@ if(Dealer != "" || Producator != ""){
     </nav>
  {{/ifCond}}
 </script>
+@*STIRI*@
+<script id="LoopStiriTemplate" type="text/x-handlebars-template">
+{{#ArticlesContainer}}
+    {{#each Article}}
+        <article class="simple-post simple-big clearfix col-md-12 separator-articole">
+            <div class="simple-thumb" style="width:255px" >
+                <a href="/Default.aspx?ID={{pagepageID}}&Purge=True">
+                  <figure class="">
+    				   <img src="/Admin/Public/GetImage.ashx?Image={{itemImaginePrincipala}}&AlternativeImage=/Files/Images/Articole/download (1).png&Crop=0&Format=jpg&Width=255&Height=168 "/> 
+                    <!--<img src="/Admin/Public/GetImage.ashx?Image=articleImage&altFmImage_path=/Files/Images/NoImage/350x230.png&Format=jpg&Width=350&Height=230&Crop=5" alt="articleTitle" class="img-responsive" />-->
+                  </figure>
+                </a>
+            </div>
+            <header>
+                <p class="simple-share">
+                  
+                    @Translate("articolde","de") 
+                    {{#each articleAutori}}
+                        <a href="{{Link}}">{{Name}}</a>
+                    {{/each}}
+                    <span><i class="fa fa-clock-o"></i> {{itemData}}</span>
+                    {{#ifCond showItemVisits '===' true}} 
+                      <span><i class="fa fa-eye"></i> {{itemVisits}} vizualizari</span>
+                    {{/ifCond}}
+                                                                    </p>
+                <h3 style="font-size: 18px; min-height:50px; max-height: 50px; overflow: hidden;">
+                    <a href="/Default.aspx?ID={{pagepageID}}&Purge=True">{{itemTitlu}}</a>
+                </h3>
+                <div class="excerpt" style="min-height:80px; max-height:80px; overflow:hidden;" >{{{itemSumar}}}</div>
+        <br/>
+            </header>
+        </article>
+        
+    {{/each}}
+{{/ArticlesContainer}}
+</script>
+
 <script>
   $(function(){
     function getURL(url) {
